--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h2>Presently: Where to find us</h2>
 
         <div>
-          <img src="images/Selvage.jpg">
+          <img src="images/selvage.jpg">
           <div class="text-block">
             <h3>Donovan</h3>
             <ul>
