fixed header align issue

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </section>
 
       <span class="jump" id="archive"></span>
-      <section class="two-column">
+      <section class="two-column archive">
         <h2>Archive</h2>
         <div class="section-intro">
           <p>Please enjoy the wealth of content that we created for over a decade. We are no longer updating any of these platforms.</p>
@@ -63,7 +63,7 @@
       </section>
 
       <span class="jump" id="now"></span>
-      <section class="two-column">
+      <section class="two-column now">
         <h2>Presently: Where to find us</h2>
 
         <div>
@@ -93,7 +93,7 @@
       </section>
 
       <span class="jump" id="downloads"></span>
-      <section class="cards">
+      <section class="cards downloads">
         <h2>Downloads</h2>
 
           <article class="featured">
@@ -265,7 +265,7 @@
       </section>
 
       <span class="jump" id="faq"></span>
-      <section class="single-column">
+      <section class="single-column faq">
         <h2>FAQs</h2>
         <h3>How about Pen Pals?</h3>
         <p>If you have used our service in the past, we have <a href="pen-pal-policy.html">kept the agreement available</a> as an archive for your reference. We cannot contact lost pen pals for you or forge lost connections.</p>
@@ -283,7 +283,7 @@
       </section>
 
       <span class="jump" id="about"></span>
-      <section class="single-column">
+      <section class="single-column about">
         <h2>About</h2>
         <img src="images/D_K_medium.jpg">
         <div>
