Push archive mode

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             <ul>
               <li><a href="https://kzadrozny.com/">Front End Design</a></li>
               <li><a href="https://cronevibes.com/">Ritual Writing</a></li>
+              <li><a href="https://murdershedrank.com/">Murder She Drank</a></li>
               <li><a href="https://www.patreon.com/cronevibes">Patreon | Crone Vibes</a></li>
             </ul>
         </div>
